test ekleme ve silme yazıldı

--- a/app/views/templates/test_results.html.erb
+++ b/app/views/templates/test_results.html.erb
@@ -16,10 +16,14 @@
             </p>
         </div>
         <div id="all_attributes">
-            <p>
+            <%
+=begin%>
+ <p>
                 <%= form.label :test_name %>
                 <%= form.text_field :test_name, id: 'test_name_input', data: { source: autocomplete_tests_path } %>
-            </p>
+            </p> 
+<%
+=end%>
         </div>
     </fieldset>
 </div>
