testleri kiwi'den REST ile çekiyoruz

--- a/app/views/issues/tabs/_issue_associated_revision.html.erb
+++ b/app/views/issues/tabs/_issue_associated_revision.html.erb
@@ -29,7 +29,9 @@
           <% desired_artifact = artifacts.find { |item| item[:changeset_id].id == changeset.id } %>
           <% if desired_artifact %>
             <pre><%= MyPlugin::Hooks::IssueAssociatedRevision.format_artifacts_table(desired_artifact[:artifacts]) %></pre>
-            <pre><%= MyPlugin::Hooks::IssueAssociatedRevision.fetch_all_packages() %></pre>
+            <pre>
+              <%= "MyPlugin::Hooks::IssueAssociatedRevision.fetch_all_packages()" %>
+            </pre>
           <% end %>
         </div>
       </div>
