tüm kiwi testleri çekiliyor

--- a/app/views/issues/tabs/_issue_associated_revision.html.erb
+++ b/app/views/issues/tabs/_issue_associated_revision.html.erb
@@ -1,4 +1,8 @@
 <div id="kod_surumleri">
+  <% if @changesets.empty? %>
+    <em>Henüz kod güncellemesi yapılmamış</em>
+  <% end %>
+
   <% @changesets.each do |changeset| %>
     <div id="changeset-<%= changeset.id %>" class="changeset journal">
       <div class="note">
