--- a/app/views/hooks/issues/_view_issues_form_details_bottom.html.erb
+++ b/app/views/hooks/issues/_view_issues_form_details_bottom.html.erb
@@ -1,125 +1,6 @@
-<h1>test ister misin view_issues_form_details_bottom</h1>
-<div id="test-container"></div>
-
-<script>
-console.log("my_plugin.js");
-
-$(document).ready(function () {
-  issueData = <%= raw issue_data %>
-  let { issue_id: issueId } = issue_data
-
-  function bindTests() {
-    // Testleri SELECT2 içinde gösterelim
-    let $select2Tests = $('<select />', {
-      multiple: 'multiple',
-      class: 'form-control',
-      id: 'test_name_input',
-      style: 'width: 400px;',
-      'data-minimum-results-for-search': 'Infinity'
-    });
-
-    $("#test-container").html($select2Tests);
-
-    function testleriGetir() {
-      $.get(`/my_plugin/issues/${issueId}/tests`).then(
-        tests => {
-          issueTests = tests.map(t => {
-            return { id: t.id, text: t.summary }
-          })
-
-          $select2Tests = $('#test_name_input').select2({
-            tags: true,
-            multiple: true,
-            minimumInputLength: 2,
-            data: issueTests,
-            ajax: {
-              // url: 'https://api.myjson.com/bins/444cr',
-              url: '/my_plugin/tests',
-              width: '100%',
-              dataType: 'json',
-              delay: 250,
-              data: function (params) {
-                return {
-                  q: params.term, // arama terimini gönderin
-                  page: params.page
-                };
-              },
-              createSearchChoice: function (term) {
-                return false;
-              },
-              noResults: function () {
-                return 'No results found'
-              },
-              searching: function () {
-                return 'Searching…'
-              },
-              processResults: function (data, params) {
-                console.log(`>>> tests data: ${data} >>> params: ${params}`);
-                // sonuçları dönüştürün ve select2 formatına uygun hale getirin
-                if (data && Array.isArray(data) && data.length == 0) {
-                  results = []
-                } else {
-                  results = data.map(function (d) { return { id: d.id, text: d.summary } })
-                }
-
-                return {
-                  results,
-                  pagination: {
-                    more: (params.page * 30) < data.total_count
-                  }
-                };
-              },
-              cache: true
-            }
-          });
-
-          $select2Tests.on('select2:select', function (e) {
-            console.log('>>> Seçildi');
-            console.log(e);
-            var data = e.params.data;
-            console.log(data);
-            $.post(`/my_plugin/issues/1/tests/${data.id}`, {})
-              .done(r => { alert(`${data.text} Testi eklendi: ${r}`); });
-          });
-
-          $select2Tests.on('select2:unselect', function (e) {
-            console.log('>>> Silindi');
-            console.log(e);
-            var data = e.params.data;
-            console.log(data);
-            $.ajax({
-              url: `/my_plugin/issues/1/tests/${data.id}`,
-              type: 'DELETE',
-              success: function (result) {
-                alert('Kayıt Silindi!');
-              }
-            });
-          });
-
-          $select2Tests.val(issueTests).trigger('change.select2');
-          window.st = $select2Tests
-        })
-    }
-
-    if (typeof $.fn.select2 === 'undefined') {
-      // select2 kütüphanesi yüklü değil, yükleyin
-      var link = document.createElement('link');
-      link.href = 'https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css';
-      link.rel = 'stylesheet';
-      link.type = 'text/css';
-      document.head.appendChild(link);
-
-      var script = document.createElement('script');
-      script.src = 'https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js';
-      document.head.appendChild(script);
-      script.onload = testleriGetir;
-    } else {
-      testleriGetir();
-    }
-  }
-
-  (function init(){
-    bindTests()
-  })()
-});
-</script>
+<% if context[:issue].new_record? %>
+  <%= context[:form].label :my_custom_field, 'My Custom Field' %>
+  <%= context[:form].select :my_custom_field, options_for_select([['Option 1', '1'], ['Option 2', '2'], ['Option 3', '3']]), {}, { multiple: true } %>
+<% else %>
+  <%# Diğer durumlar için gerekli olan kodları buraya ekleyin %>
+<% end %>
