issue yaratılırken çalışmıyor ama edit durumunda çalışıyor

--- a/app/views/templates/_issue_test_results.html.erb
+++ b/app/views/templates/_issue_test_results.html.erb
@@ -8,7 +8,7 @@
             issue_data["issue_tests"].each do |test| 
         %>
           <li>
-            <%= test["text"] %>
+          PAKET VAR - <%= test["text"] %>
             <ol>
             <li>Koşu 21 &check;</li>
             <li>Koşu 19 &#215;</li>
