yükleme için kodlama ilk calisir forma getirdi

--- a/app/views/hooks/issues/_view_issues_form_details_bottom.html.erb
+++ b/app/views/hooks/issues/_view_issues_form_details_bottom.html.erb
@@ -9,7 +9,7 @@
 <% end %>
 
 <script>
-console.log("my_plugin.js");
+console.log(">>> Test seçcmek için gerekli javascript metotları....");
 
 function initSelect2() {
 
