--- a/app/views/templates/_issue_test_results.html.erb
+++ b/app/views/templates/_issue_test_results.html.erb
@@ -1,3 +1,7 @@
+<script>
+  console.log(">>> Test seçcmek için gerekli javascript metotları....");
+</script>
+
 <div class="box filedroplistner">
   <fieldset class="tabular">
     <legend>Testler</legend>
