--- a/app/views/settings/_ulak_test_settings.erb
+++ b/app/views/settings/_ulak_test_settings.erb
@@ -53,7 +53,7 @@
       <td>
       <script>
         function syncKiwiTests(){
-          $.get( "/my_plugin/tests/sync", function( data ) {
+          $.get( "/ulak_test/tests/sync", function( data ) {
             console.log( data );
             mesaj = `${data.after-data.before} Kayıt eklendi` 
             alert( "Eşleştirme başarıyla tamamlandı.\n", mesaj );
