--- a/app/views/issues/tabs/_issue_test_results.html.erb
+++ b/app/views/issues/tabs/_issue_test_results.html.erb
@@ -1,7 +1,7 @@
 <!--h1>test ister misin1</h1-->
 
 <script>
-console.log("my_plugin.js");
+console.log("ulak_test.js");
 
 $(document).ready(function () {
   issueData = <%= raw issue_data %>
@@ -10,7 +10,7 @@ $(document).ready(function () {
   let tabHeaderId = 'tab-test_results'
   let tabContentId = 'tab-content-test_results'
   let url = `/issues/${issueId}?tab=${tabName}`;
-  let remote_url = `/my_plugin/issues/${issueId}/tab/${tabName}`;
+  let remote_url = `/ulak_test/issues/${issueId}/tab/${tabName}`;
 
   function createTabHeader($history_ul) {
     // Tab'ın başlığını oluşturup sekmelerin yanına yerleştirelim
