--- a/app/views/templates/_tab_content_issue_test_results.html.erb
+++ b/app/views/templates/_tab_content_issue_test_results.html.erb
@@ -2,25 +2,89 @@
   console.log(">>> Test seçcmek için gerekli javascript metotları....");
 </script>
 
-<div class="box filedroplistner">
-  <fieldset class="tabular">
-    <legend>Testler</legend>
-    <div id="all_attributes">
-      <ol>
-        <% 
-            # issue_data = JSON.parse(@issue_data)
-            # issue_data["issue_tests"].each do |test| 
-            tests.each do |test| 
-        %>
-          <li>
-          PAKET VAR - <%= test["summary"] %>
-            <ol>
-            <li>Koşu 19 &#215;</li>
-            </ol>
-          </li>
+<% if commit_with_artifacst.any? { |cs| cs[:artifacts].present? } 
 
-        <% end %>
-      </ol>
-    </div>
-  </fieldset>
+  # Test senaryolarının çalştırılma listesini dön
+  test_case_ids = tests.map { |t| t.test_case_id }
+  executions = UlakTest::Kiwi.fetch_testexecution_by_case_id_in(test_case_ids)
+  execution_summary = executions.map { |e| { run: e["run"], case: e["case"], case__summary: e["case__summary"], status__name: e["status__name"] } }
+
+  # Revizyonlardan üretilen artifacts oluşturulsun
+  all_artifacts = commit_with_artifacst.map { |cs| cs[:artifacts] }.compact.flatten
+  all_artifacts = all_artifacts.map { |artifact| { name: artifact, as_tag_name: nil, tags:nil, run_ids:[], runs:nil }}
+
+  all_artifacts.each do |artifact|
+    artifact[:as_tag_name] = artifact[:name]
+    if artifact[:name].end_with?(".deb") 
+      arr=artifact[:name].split("_")
+      artifact[:as_tag_name] = "#{arr[0]}=#{arr[1]}"
+    end
+    artifact[:tags] = UlakTest::Kiwi.fetch_tags_by_tag_name(artifact[:as_tag_name])
+    artifact[:run_ids] = artifact[:tags].map{ |t| t["run"]}
+    artifact[:runs] = UlakTest::Kiwi.fetch_tags_by_run_ids(artifact[:run_ids], artifact[:as_tag_name])
+    artifact[:executions] = execution_summary.select { |es| artifact[:run_ids].include?(es[:run]) }
+  end
+end %>
+
+
+<div class="box filedroplistner">
+  <div id="activity">
+      <% 
+          # issue_data = JSON.parse(@issue_data)
+          # issue_data["issue_tests"].each do |test| 
+          # tests.each do |test| 
+          commit_with_artifacst.each do |cwa| 
+            cs = cwa[:changeset]
+            artifacts_metadata = cwa[:artifacts_metadata=]
+            artifacts = cwa[:artifacts]
+      %>
+        <div class="commit_revision">
+          <h3>
+            <%= "#{l(:label_revision)} #{cs.format_identifier}"%>
+            [<%= authoring cs.committed_on, cs.author, label: :label_added_time_by %>]
+          </h3>
+          <p>
+            <% if artifacts.present? %>
+            <ol>
+              <% artifacts.each do |artifact| %>
+              <li>
+                <% a = all_artifacts.find { |a| a[:name] == artifact } %>
+                <%= a[:as_tag_name] %>
+                <% a[:executions].group_by { |item| item[:run] }.each do |execution| %>
+                <ol>
+                  <li>
+                    Run: <%= execution[0] %><br>
+                    Cases:
+                    <ol>
+                      <% execution[1].each do |e| %>
+                        <li>
+                          <% case e[:status__name]
+                            when "PASSED" 
+                              status_icon = "✓" 
+                            when "SKIPPED" 
+                              status_icon = "⚠️" 
+                            when "FAILED"
+                              status_icon = "❌" 
+                            else
+                              status_icon = ""
+                            end 
+                        %>
+
+                          <%= "#{status_icon} #{e[:status__name]} #{e[:case__summary]}" unless status_icon.empty? %>
+
+                        </li>
+                      <% end %>
+                    </ol>
+                  </li>
+                </ol>
+                <% end %>
+              </li>
+              <% end %>
+          
+            <% end %>
+          </p>
+        </div> <!-- class="commit_revision" -->
+
+      <% end %>
+  </div>
 </div>
