--- a/app/views/settings/_ulak_test_eklenti_settings.html.erb
+++ b/app/views/settings/_ulak_test_eklenti_settings.html.erb
@@ -31,19 +31,19 @@
     <tr>
       <th>URL</th>
       <td>
-        <%= text_field_tag "settings_rest_api_url", @settings["rest_api_url"] %>
+        <%= text_field_tag "settings_rest_api_url", @plugin.settings[:default]["rest_api_url"] %>
       </td>
     </tr>
     <tr>
       <th>Username</th>
       <td>
-        <%= text_field_tag "settings_rest_api_username", @settings["rest_api_username"] %>
+        <%= text_field_tag "settings_rest_api_username", @plugin.settings[:default]["rest_api_username"] %>
       </td>
     </tr>
     <tr>
       <th>Password</th>
       <td>
-        <%= password_field_tag "settings_rest_api_password", @settings["rest_api_password"] %>
+        <%= password_field_tag "settings_rest_api_password", @plugin.settings[:default]["rest_api_password"] %>
       </td>
     </tr>
     <tr>
@@ -67,19 +67,19 @@
     <tr>
       <th>Jenkins URL</th>
       <td>
-        <%= text_field_tag "settings_jenkins_url", @settings["jenkins_url"] %>
+        <%= text_field_tag "settings_jenkins_url", @plugin.settings[:default]["jenkins_url"] %>
       </td>
     </tr>
     <tr>
       <th>Jenkins Username</th>
       <td>
-        <%= text_field_tag "settings_jenkins_username", @settings["jenkins_username"] %>
+        <%= text_field_tag "settings_jenkins_username", @plugin.settings[:default]["jenkins_username"] %>
       </td>
     </tr>
     <tr>
       <th>Jenkins TOKEN</th>
       <td>
-        <%= password_field_tag "settings_jenkins_token", @settings["jenkins_token"] %>
+        <%= password_field_tag "settings_jenkins_token", @plugin.settings[:default]["jenkins_token"] %>
       </td>
     </tr>
     <tr>
@@ -88,13 +88,13 @@
     <tr>
       <th>URL Path</th>
       <td>
-        <%= text_field_tag "settings_deployment_job_path", @settings["deployment_job_path"] %>
+        <%= text_field_tag "settings_deployment_job_path", @plugin.settings[:default]["deployment_job_path"] %>
       </td>
     </tr>
     <tr>
       <th>Token</th>
       <td>
-        <%= text_field_tag "settings_deployment_job_token", @settings["deployment_job_token"] %>
+        <%= text_field_tag "settings_deployment_job_token", @plugin.settings[:default]["deployment_job_token"] %>
       </td>
     </tr>
   </tbody>
