urun hattına giriyor

--- a/app/views/issues/tabs/_tab_issue_test_results.html.erb
+++ b/app/views/issues/tabs/_tab_issue_test_results.html.erb
@@ -17,7 +17,7 @@ $(document).ready(function () {
       class: "",
       onclick: `getRemoteTab('${tabName}', '${remote_url}', '${url}'); return false;`,
       href: `/issues/${issueId}?tab=${tabName}`,
-      text: "Test Results"
+      text: '<%= l(:text_issue_test_results) %>'
     });
 
     return $('<li>').html($tabTestResultHeader)
